[package]
name = "serum-swap"
version = "0.4.1"
edition = "2018"
license = "Apache-2.0"
description = "Swap on the Serum DEX"
authors = ["Serum Foundation <foundation@projectserum.com>"]
repository = "https://github.com/project-serum/swap"

[lib]
crate-type = ["cdylib", "lib"]
name = "serum_swap"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.17.0"
anchor-spl = "0.17.0"
solana-program = "=1.7.11"

[profile.release]
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
