[package]
name = "swap"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "swap"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
#anchor-lang = "0.9.0"
#anchor-spl = "0.9.0"
anchor-lang = { path = "../../../../../../lang" }
anchor-spl = { path = "../../../../../../spl", features = ["dex"] }
solana-program = "1.7.1"
