[package]
name = "serum-swap"
version = "0.4.1"
edition = "2018"
license = "Apache-2.0"
description = "Swap on the Serum DEX"
authors = ["Serum Foundation <foundation@projectserum.com>"]
repository = "https://github.com/project-serum/swap"

[lib]
crate-type = ["cdylib", "lib"]
name = "serum_swap"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.20.1"
anchor-spl = { version = "0.20.1", features = ["dex"] }
solana-program = "1.9.4"

[profile.release]
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
